<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrazyForexClub</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">New Game</string>
    <string name="Dollars">$$</string>
    <string name="Sell">Sell</string>
    <string name="Buy">Buy</string>
    <string name="PriceToSell">Price to sell</string>
    <string name="PriceToBuy">Price to buy</string>
    <string name="Stock">Stock</string>
    <string name="result">Result!</string>
    
</resources>
